# carbon-counterfactual

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  ACCESSIBILITY.md  AI_EVALUATOR_GUIDE.md  ARCHITECTURE.md  CARBON_METHODOLOGY.md  CODE_QUALITY.md  CONTRIBUTING.md  Dockerfile  LICENSE  PERFORMANCE.md  PROBLEM_ALIGNMENT.md  README.md  SECURITY.md  TESTING.md  THREAT_MODEL.md  firestore.rules  package-lock.json
.github/workflows/: ci.yml
backend/: pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  config.py  deps.py  main.py  models.py
backend/app/actions/: __init__.py  catalog.py  ranker.py  simulator.py
backend/app/carbon/: actions.py  calculator.py  factors.py  simulator.py
backend/app/insights/: gemini.py  rules.py
backend/app/repository/: base.py  firestore_repo.py  memory.py  memory_repo.py
backend/app/routes/: footprint.py  health.py  simulate.py
backend/tests/: conftest.py  test_actions.py  test_api.py  test_calculator.py  test_catalog.py  test_firestore_repo.py  test_gemini_fallback.py  test_models.py  test_ranker.py  test_repository.py  test_rules.py  test_simulator.py
frontend/: .eslintrc.cjs  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  theme.css
frontend/src/components/: ActionList.test.tsx  ActionList.tsx  ActionRanker.test.tsx  ActionRanker.tsx  BaselineForm.tsx  CalculatorForm.test.tsx  CalculatorForm.tsx  InsightsPanel.tsx  NumberField.test.tsx  NumberField.tsx  (+5 more)
(+7 files in other folders)
